# grove

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.gemini/: config.yaml
.github/workflows/: build.yml  ci-workflows.yml  collect-coverage.yml  release.yml  run-static-checks.yml  run-tests.yml
docs/: architecture.md  config.md  testing.md  usage.md
scripts/: verify-release-version.sh
src/: error.rs  inspection.rs  lib.rs  main.rs
src/app/: api.rs  context.rs  entry.rs  events.rs  init.rs  inspection.rs  list.rs  mod.rs  phases.rs  report.rs  status.rs  sync.rs  validate.rs
src/assets/: grove.toml.tpl
src/cache/: mod.rs
src/cli/: init.rs  item.rs  label.rs  labeling.rs  list.rs  mod.rs  output.rs  printer.rs  reporters.rs  repository_progress.rs  status.rs  sync.rs  terminal_report.rs  validate.rs
src/config/: discovery.rs  file.rs  include.rs  mod.rs  resolved.rs  validation.rs
src/git/: branch_update.rs  cache_entry.rs  client.rs  command.rs  default_branch.rs  mod.rs  probe.rs  progress.rs  remote.rs  tracking.rs  update.rs  working_tree.rs  worktree.rs
src/items/: item_id.rs  mod.rs  store.rs  testing.rs
src/labels/: label_name.rs  mod.rs  store.rs  testing.rs
src/phases/: events.rs  mod.rs  run.rs  workers.rs
src/repositories/: branch_name.rs  definition.rs  mod.rs  name.rs  path.rs  selection.rs  state.rs  url.rs
src/zoxide/: client.rs  command.rs  mod.rs
tests/: cli.rs  library.rs
tests/cli/: cache.rs  clone.rs  help_and_version.rs  init.rs  list.rs  mod.rs  refresh.rs  status.rs  sync.rs  validate.rs
(+79 files in other folders)
