[package]
name = "grove"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "gv"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["in_memory"] }
owo-colors = "4.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
toml = { version = "0.8", features = ["preserve_order"] }
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
libc = "0.2"
predicates = "3.1"
tempfile = "3.10"
